--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-coffee": "^3.0.2",
+    "gulp-concat": "^2.6.1",
     "gulp-util": "^3.0.8"
   }
 }
