--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-coffee": "^3.0.2",
+    "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-jquery": "^1.1.2",
     "gulp-mustache": "^3.0.1",
