--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-coffee": "^3.0.2",
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.5.0",
     "gulp-jquery": "^1.1.2",
     "gulp-mustache": "^3.0.1",
     "gulp-util": "^3.0.8",
