--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "gulp-compass": "^2.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
+    "gulp-if": "^2.0.2",
     "gulp-jquery": "^1.1.2",
     "gulp-mustache": "^3.0.1",
+    "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1"
   }
