--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.5.0",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-jquery": "^1.1.2",
+    "gulp-jsonminify": "^1.1.0",
+    "gulp-minify-html": "^1.0.6",
     "gulp-mustache": "^3.0.1",
     "gulp-uglify": "^3.0.1",
     "gulp-util": "^3.0.8",
+    "imagemin-pngcrush": "^5.1.0",
     "jquery": "^3.3.1"
   }
 }
